2013-07-13 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>
	* src/hawModel/hawParser.py: New formulation of version string
	* src/hawModel/hawParserTest.py: New test cases for new formulation of
	 version string and new formulation of token 'fach'.

2013-03-19 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>
	* src/texts.py: Set Version to SoSe-2013-1

2013-03-16 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>
	* src/hawModel/icalendar.py: Replaced tabs by 8 spaces

2013-03-16 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>
	* src/hawModel/hawParser.py: New formulation for version string
	* src/hawModel/hawParserTest.py: New test case for new formulation for
	 version string
	* src/hawModel/testData/Sem_I.WiSe2012.v12.txt: New test data
	* haw2iCalendar-klickiBunti.py: Fix for umlauts in filenames
	* haw2iCalendar-klickiBunti.py: Fix for umlauts in filenames
	* src/controller.py: Replaced tabs by 8 spaces

2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

	* src/hawModel/hawParser.py,src/hawModel/hawDispatchProcessor.py:
	 etech text calendar file introduced a septupel with a new
	 'gebaeude'-element -> parser and dispatcher adjusted

2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

	* src/klickiBunti.py -> haw2iCalendar-klickiBunti.py,
	  src/haw2iCalendar.py -> haw2iCalendar.py: renamed

2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

	* hawModel/hawParser.py,hawModel/hawParserTest.py: Adjusted to new
	 formulations in the calendar-text file. This includes the '11 vs.
	 2011/12' thing (SoSe vs. WiSe)

	* controller.py: Will no produce a logging info if there goes
	 something wrong while parsing the calendar-text file.

	* hawModel/veranstaltungen/veranstaltungenDispatchProcessor.py,
	 hawModel/veranstaltungen/veranstaltungenParser.py,
	 hawModel/veranstaltungen/veranstaltungenParserTest.py:
	 Adjusted to new veranstaltungen-names.

	* hawModel/testData/: Added some test data.
