@@ -2,6 +2,7 @@
 	* src/hawModel/hawParser.py: New formulation of version string
 	* src/hawModel/hawParserTest.py: New test cases for new formulation of
 	 version string and new formulation of token 'fach'.
+	* haw2iCalendar-klickiBunti.py: Vars (used as vals) for URLs.
 
 2013-03-19 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>
 	* src/texts.py: Set Version to SoSe-2013-1
